[gd_scene load_steps=36 format=3 uid="uid://bnp6y3fe4kqob"]

[ext_resource type="Script" path="res://scenes/game/levels/objects/damage_object/cannon/cannon.gd" id="1_t2rj5"]
[ext_resource type="Texture2D" uid="uid://b6r22txxtcslw" path="res://assets/sprites/treasure_hunters/shooter_traps/sprites/cannon/cannon_fire_effect/1.png" id="13_id8tl"]
[ext_resource type="Texture2D" uid="uid://bajc02rl7qd6" path="res://assets/sprites/treasure_hunters/shooter_traps/sprites/cannon/cannon_fire_effect/2.png" id="14_2jbrr"]
[ext_resource type="Texture2D" uid="uid://cspsvvvqdblxt" path="res://assets/sprites/treasure_hunters/shooter_traps/sprites/cannon/cannon_fire_effect/3.png" id="15_iimgy"]
[ext_resource type="Texture2D" uid="uid://cj10crvyo2oif" path="res://assets/sprites/treasure_hunters/shooter_traps/sprites/cannon/cannon_fire_effect/4.png" id="16_sds8d"]
[ext_resource type="Texture2D" uid="uid://bpfdf0fm10aws" path="res://assets/sprites/treasure_hunters/shooter_traps/sprites/cannon/cannon_fire_effect/5.png" id="17_q4b5x"]
[ext_resource type="Texture2D" uid="uid://bi173vfx1xywa" path="res://assets/sprites/treasure_hunters/shooter_traps/sprites/cannon/cannon_fire/1.png" id="17_y86jf"]
[ext_resource type="Texture2D" uid="uid://bkd4sw67xn25y" path="res://assets/sprites/treasure_hunters/shooter_traps/sprites/cannon/cannon_fire_effect/6.png" id="18_ben6w"]
[ext_resource type="Texture2D" uid="uid://dx7mk5m5gj8fn" path="res://assets/sprites/treasure_hunters/shooter_traps/sprites/cannon/cannon_fire/2.png" id="18_o2ut2"]
[ext_resource type="Texture2D" uid="uid://cejmxwhlgfa0g" path="res://assets/sprites/treasure_hunters/captain_clown_nose/sprites/dialogue/interaction/interaction_in_01.png" id="19_1w1my"]
[ext_resource type="Texture2D" uid="uid://oaykh7x3qa2t" path="res://assets/sprites/treasure_hunters/shooter_traps/sprites/cannon/cannon_fire/3.png" id="19_phxut"]
[ext_resource type="Texture2D" uid="uid://1gkyvjygb0rs" path="res://assets/sprites/treasure_hunters/shooter_traps/sprites/cannon/cannon_fire/4.png" id="20_fyevh"]
[ext_resource type="Texture2D" uid="uid://382fw7e7yvjk" path="res://assets/sprites/treasure_hunters/captain_clown_nose/sprites/dialogue/interaction/interaction_in_02.png" id="20_iyc07"]
[ext_resource type="Texture2D" uid="uid://bakbtemngbbce" path="res://assets/sprites/treasure_hunters/shooter_traps/sprites/cannon/cannon_fire/5.png" id="21_74r0y"]
[ext_resource type="Texture2D" uid="uid://6w0a1iby6gkt" path="res://assets/sprites/treasure_hunters/captain_clown_nose/sprites/dialogue/interaction/interaction_in_03.png" id="21_rw7il"]
[ext_resource type="Texture2D" uid="uid://lp3wge4qatlh" path="res://assets/sprites/treasure_hunters/captain_clown_nose/sprites/dialogue/interaction/interaction_out_01.png" id="22_jvpnj"]
[ext_resource type="Texture2D" uid="uid://mi8t4mtlm4tq" path="res://assets/sprites/treasure_hunters/shooter_traps/sprites/cannon/cannon_fire/6.png" id="22_nl32q"]
[ext_resource type="Texture2D" uid="uid://buf7ijq1v3vgg" path="res://assets/sprites/treasure_hunters/captain_clown_nose/sprites/dialogue/interaction/interaction_out_02.png" id="23_1u5c1"]
[ext_resource type="Texture2D" uid="uid://bb4hccofvwe3x" path="res://assets/sprites/treasure_hunters/shooter_traps/sprites/cannon/cannon_hit/1.png" id="23_mm8ec"]
[ext_resource type="Texture2D" uid="uid://docejptn7mf5s" path="res://assets/sprites/treasure_hunters/shooter_traps/sprites/cannon/cannon_hit/2.png" id="24_15v71"]
[ext_resource type="Texture2D" uid="uid://bfcy11gew8tx2" path="res://assets/sprites/treasure_hunters/captain_clown_nose/sprites/dialogue/aiming/aiming_0.png" id="24_hywod"]
[ext_resource type="Texture2D" uid="uid://dnejpksbslsb5" path="res://assets/sprites/treasure_hunters/captain_clown_nose/sprites/dialogue/aiming/aiming_1.png" id="25_1h478"]
[ext_resource type="Texture2D" uid="uid://dlgms8bbptic1" path="res://assets/sprites/treasure_hunters/shooter_traps/sprites/cannon/cannon_hit/3.png" id="25_5o46n"]
[ext_resource type="Texture2D" uid="uid://bl6r0rsxi7fya" path="res://assets/sprites/treasure_hunters/captain_clown_nose/sprites/dialogue/aiming/aiming_2.png" id="26_1ajiy"]
[ext_resource type="Texture2D" uid="uid://c8ml72h6eandi" path="res://assets/sprites/treasure_hunters/shooter_traps/sprites/cannon/cannon_hit/4.png" id="26_obvdl"]
[ext_resource type="Texture2D" uid="uid://cmrthiq23pkua" path="res://assets/sprites/treasure_hunters/captain_clown_nose/sprites/dialogue/aiming/aiming_3.png" id="27_hrpb5"]
[ext_resource type="Texture2D" uid="uid://1c2x1eybvkk3" path="res://assets/sprites/treasure_hunters/shooter_traps/sprites/cannon/cannon_idle/1.png" id="27_o0xpr"]
[ext_resource type="Texture2D" uid="uid://bd0lgo37sh3hr" path="res://assets/sprites/treasure_hunters/captain_clown_nose/sprites/dialogue/aiming/aiming_4.png" id="28_tg08j"]
[ext_resource type="Texture2D" uid="uid://btxiibehgdjsw" path="res://assets/sprites/treasure_hunters/captain_clown_nose/sprites/dialogue/aiming/aiming_5.png" id="29_f4scu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ktbri"]
size = Vector2(28, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_h5nvd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("17_y86jf")
}, {
"duration": 1.0,
"texture": ExtResource("18_o2ut2")
}, {
"duration": 1.0,
"texture": ExtResource("19_phxut")
}, {
"duration": 1.0,
"texture": ExtResource("20_fyevh")
}, {
"duration": 1.0,
"texture": ExtResource("21_74r0y")
}, {
"duration": 1.0,
"texture": ExtResource("22_nl32q")
}],
"loop": false,
"name": &"fire",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("23_mm8ec")
}, {
"duration": 1.0,
"texture": ExtResource("24_15v71")
}, {
"duration": 1.0,
"texture": ExtResource("25_5o46n")
}, {
"duration": 1.0,
"texture": ExtResource("26_obvdl")
}],
"loop": false,
"name": &"hit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("27_o0xpr")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_tmb21"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("13_id8tl")
}, {
"duration": 1.0,
"texture": ExtResource("14_2jbrr")
}, {
"duration": 1.0,
"texture": ExtResource("15_iimgy")
}, {
"duration": 1.0,
"texture": ExtResource("16_sds8d")
}, {
"duration": 1.0,
"texture": ExtResource("17_q4b5x")
}, {
"duration": 1.0,
"texture": ExtResource("18_ben6w")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"fire_effect",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mrgu5"]
size = Vector2(8, 20)

[sub_resource type="SpriteFrames" id="SpriteFrames_s6p2r"]
resource_local_to_scene = true
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("21_rw7il")
}],
"loop": true,
"name": &"active",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("19_1w1my")
}, {
"duration": 1.0,
"texture": ExtResource("20_iyc07")
}, {
"duration": 1.0,
"texture": ExtResource("21_rw7il")
}],
"loop": true,
"name": &"in",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("19_1w1my")
}],
"loop": true,
"name": &"inactive",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("22_jvpnj")
}, {
"duration": 1.0,
"texture": ExtResource("23_1u5c1")
}],
"loop": true,
"name": &"out",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_otl86"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("24_hywod")
}],
"loop": true,
"name": &"active",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("24_hywod")
}, {
"duration": 1.0,
"texture": ExtResource("25_1h478")
}, {
"duration": 1.0,
"texture": ExtResource("26_1ajiy")
}, {
"duration": 1.0,
"texture": ExtResource("27_hrpb5")
}, {
"duration": 1.0,
"texture": ExtResource("28_tg08j")
}, {
"duration": 1.0,
"texture": ExtResource("29_f4scu")
}],
"loop": true,
"name": &"charging",
"speed": 6.0
}, {
"frames": [],
"loop": true,
"name": &"inactive",
"speed": 5.0
}]

[node name="Cannon" type="RigidBody2D" groups=["cannon"]]
mass = 1000.0
script = ExtResource("1_t2rj5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_ktbri")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_h5nvd")
animation = &"idle"

[node name="AnimatedSprite2DEffects" type="AnimatedSprite2D" parent="."]
position = Vector2(-25, -1)
sprite_frames = SubResource("SpriteFrames_tmb21")
animation = &"fire_effect"

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(20, 0)
shape = SubResource("RectangleShape2D_mrgu5")

[node name="AnimatedInteraction" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -24)
sprite_frames = SubResource("SpriteFrames_s6p2r")
animation = &"inactive"

[node name="AnimatedAiming" type="AnimatedSprite2D" parent="."]
position = Vector2(-32, 0)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_otl86")
animation = &"charging"
offset = Vector2(-7, 0)

[node name="Node2D" type="Node2D" parent="AnimatedAiming"]
position = Vector2(-16, 0)

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_frame_changed"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="animation_finished" from="AnimatedInteraction" to="." method="_on_animated_interaction_animation_finished"]
